<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_action_bar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/back"
            android:orientation="horizontal"
            android:background="@drawable/ab_btn_bg">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_nav_arrowleft" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/api_key"
        android:layout_below="@id/top_action_bar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_white"
        android:hint="@string/api_key"
        android:gravity="center" />

    <Button
        android:id="@+id/save"
        android:layout_below="@+id/api_key"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ab_btn_bg"
        android:text="@string/save"
        android:textSize="18sp"
        android:textColor="@color/white" />
</RelativeLayout>